trying to redirect to another jsp; added index2 ande another controller

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -13,4 +13,14 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>Servlet_redirect</servlet-name>
+        <servlet-class>Servlet_redirect</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>Servlet_redirect</servlet-name>
+        <url-pattern>/re</url-pattern>
+    </servlet-mapping>
+
 </web-app>
