--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,7 +5,7 @@
          version="3.1">
     <servlet>
         <servlet-name>LoginController</servlet-name>
-        <servlet-class>LoginController</servlet-class>
+        <servlet-class>Controllers.LoginController1</servlet-class>
     </servlet>
 
     <servlet-mapping>
