--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -28,9 +28,13 @@
 
 
     <welcome-file-list>
-        <welcome-file>index.html</welcome-file>
-        <welcome-file>index.htm</welcome-file>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
+
+    <resource-env-ref>
+        <resource-env-ref-name>jdbc/uktcLib</resource-env-ref-name>
+        <resource-env-ref-type>javax.sql.DataSource</resource-env-ref-type>
+    </resource-env-ref>
+
 
 </web-app>
