--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -13,28 +13,25 @@
 
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
-        <url-pattern>/</url-pattern>
+        <url-pattern>/LoginController1.java</url-pattern>
     </servlet-mapping>
 
     <servlet>
-        <servlet-name>Servlet_redirect</servlet-name>
-        <servlet-class>controllers.Servlet_redirect</servlet-class>
+        <servlet-name>LogoutController</servlet-name>
+        <servlet-class>controllers.LogoutController</servlet-class>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>Servlet_redirect</servlet-name>
-        <url-pattern>/controllers.Servlet_redirect</url-pattern>
+        <servlet-name>LogoutController</servlet-name>
+        <url-pattern>/LogoutController.java</url-pattern>
     </servlet-mapping>
 
 
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
+        <welcome-file>login.jsp</welcome-file>
+        <welcome-file>wrongLogin.jsp</welcome-file>
     </welcome-file-list>
-
-    <resource-env-ref>
-        <resource-env-ref-name>jdbc/uktcLib</resource-env-ref-name>
-        <resource-env-ref-type>javax.sql.DataSource</resource-env-ref-type>
-    </resource-env-ref>
 
 
 </web-app>
