--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -6,35 +6,15 @@
 
 
 
-    <servlet>
-        <servlet-name>LoginController</servlet-name>
-        <servlet-class>controllers.LoginController1</servlet-class>
-    </servlet>
-
-    <servlet-mapping>
-        <servlet-name>LoginController</servlet-name>
-        <url-pattern>/</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>Servlet_redirect</servlet-name>
-        <servlet-class>controllers.Servlet_redirect</servlet-class>
-    </servlet>
-
-    <servlet-mapping>
-        <servlet-name>Servlet_redirect</servlet-name>
-        <url-pattern>/controllers.Servlet_redirect</url-pattern>
-    </servlet-mapping>
-
-
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
+        <welcome-file>login.jsp</welcome-file>
+        <welcome-file>addBook.jsp</welcome-file>
+        <welcome-file>SearchBook.jsp</welcome-file>
+        <welcome-file>ShowBook.jsp</welcome-file>
+        <welcome-file>wrongLogin.jsp</welcome-file>
     </welcome-file-list>
 
-    <resource-env-ref>
-        <resource-env-ref-name>jdbc/uktcLib</resource-env-ref-name>
-        <resource-env-ref-type>javax.sql.DataSource</resource-env-ref-type>
-    </resource-env-ref>
 
 
 </web-app>
