--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,7 +4,9 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
-
+    <session-config>
+        <session-timeout>10</session-timeout>
+    </session-config>
 
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
